# qt-simple-image-manipulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ImageContainer.h  MainWindow.h
src/: ImageContainer.cpp  MainWindow.cpp  Resource.qrc  main.cpp
src/ui/: MainWindow.ui
tests/: CMakeLists.txt  ImageContainerTester.cpp  ImageContainerTester.h  Resource.qrc  main.cpp
